--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     compile 'io.realm:realm-android:0.82.1'
     compile 'com.onyxbeacon:OnyxBeaconLibrary-release:2.2@aar'
     compile 'com.android.support:design:23.1.0'
+    compile 'com.opencsv:opencsv:3.3'
 }
