--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:support-v4:23.1.0'
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.google.android.gms:play-services:8.3.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
